# x-uav

./: .env.example  .gitignore  BACKEND-SETUP.md  BACKEND-TEST-RESULTS.md  CLAUDE.md  DATABASE-SCHEMA.md  FRONTEND-IMPLEMENTATION.md  IMPLEMENTATION-STATUS.md  MEMOIZE.md  PROJECT-PLAN.md  PROJECT-SUMMARY.md  PROMPTS.md  QUICKSTART.md  README.md  SCRIPTS.md  TASK.md  UAV-DATA-MODEL.md  VISUAL-REQUIREMENTS.md  X-UAS-CONTEXT-ENGINEERING-PROMPT.md  docker-compose.yml  start.sh  status.sh  stop.sh
backend/: Dockerfile.dev  pyproject.toml  run.sh
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: graph.py  search.py  uavs.py
backend/app/core/: config.py
backend/app/db/: arangodb.py  postgresql.py  schema.py
backend/app/models/: __init__.py  uav.py
backend/app/schemas/: __init__.py  context.jsonld  uav.py
backend/app/services/: import_service.py  query_service.py
backend/data_db/: uavs.duckdb
backend/db/: schema.sql
backend/docs/: ONTOLOGY.md
backend/scripts/: add_uav.py  init_db.py
backend/tests/: __init__.py  test_api.py  test_query_service.py
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/css/: main.css
frontend/src/components/: UAVList.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: AboutView.vue  CompareView.vue  GraphView.vue  HomeView.vue
